# project_name_titanicml

TitanicML/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
TitanicML/notebooks/: 01_exploration.ipynb  02_baseline_model.ipynb  03_feature_engineering.ipynb
TitanicML/src/: __init__.py  config.py  data_loading.py  evaluate.py  model.py  predict.py  preprocessing.py  train.py  utils.py
TitanicML/tests/: test_model.py  test_preprocessing.py
