[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titanicml"
version = "0.1.0"
description = "A small but production-style machine learning project for the Titanic dataset"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "TitanicML Developers" }
]
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.23.0",
  "scikit-learn>=1.2.0",
  "joblib>=1.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "jupyter>=1.0.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0"
]

[project.urls]
Homepage = "https://example.com/titanicml"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
