[metadata]
name = titanicml
version = 0.1.0
author = TitanicML Developers
description = A small but production-style machine learning project for the Titanic Kaggle dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com/titanicml
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.9
install_requires =
    pandas>=1.5.0
    numpy>=1.23.0
    scikit-learn>=1.2.0
    joblib>=1.2.0

[options.packages.find]
where = .

[tool:pytest]
minversion = 7.0
addopts = -ra -q
 testpaths =
    tests

[flake8]
max-line-length = 100
extend-ignore = E203, W503
